Fixed alignment on tabs fields

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -183,7 +183,7 @@
     }
 	/* End Blog page Area css
 	============================================================================================ */
-	
+
 	/* Contact Page Area css
 	============================================================================================ */
 	.contact_info{
@@ -241,6 +241,30 @@
 	.home_banner_area .banner_inner .banner_content {
 		margin-top: 0px;
 	}
+
+	/* Tabs Page Area css
+	============================================================================================ */
+	.tabs_inner .tab-content .tab-pane .list::before {
+		display: none;
+	}
+	.tabs_inner .tab-content .tab-pane .list li .media .d-flex {
+		padding-right: 0px;
+		padding-bottom: 18px;
+	}
+	.tabs_inner .tab-content .tab-pane .list li .media .d-flex p {
+		text-align: left;
+	}
+
+	.tabs_inner .tab-content .tab-pane .list li .media {
+		display: block;
+	}
+	.tabs_inner .tab-content .tab-pane .list li span {
+		display: none;
+	}
+	.tabs_inner .nav.nav-tabs {
+		margin-bottom: 0px;
+	}
+
 	/* Blog Page Area css
 	============================================================================================ */
     .blog_banner .banner_inner .blog_b_text h2 {
@@ -298,7 +322,7 @@
 	}
 }
 @media (max-width:600px){
-	
+
 }
 @media (max-width:575px){
 	.top_menu {
@@ -343,7 +367,7 @@
 	}
 	/* End Elements Area css
 	============================================================================================ */
-	
+
 	/* Blog Page Area css
 	============================================================================================ */
 	.blog_details h2 {
@@ -376,10 +400,10 @@
 	.home_banner_area {
 		margin-bottom: 71px;
 	}
-	.tabs_inner .nav.nav-tabs li a {
-		line-height: 42px;
-		padding: 0px 18px;
-	}
+	/*.tabs_inner .nav.nav-tabs li a {*/
+	/*	line-height: 42px;*/
+	/*	padding: 0px 18px;*/
+	/*}*/
 	.gallery_f_inner{
 		max-width: 340px;
 		margin: 0px auto -45px;
@@ -398,7 +422,7 @@
 	}
 	/* End Main Menu Area css
 	============================================================================================ */
-	
+
 	/* Home Banner Area css
 	============================================================================================ */
     .home_banner_area .banner_inner .banner_content {
@@ -420,22 +444,6 @@
 	}
 	/* End Blog Page Area css
 	============================================================================================ */
-	.tabs_inner .tab-content .tab-pane .list::before {
-		display: none;
-	}
-	.tabs_inner .tab-content .tab-pane .list li .media .d-flex {
-		padding-right: 0px;
-		padding-bottom: 18px;
-	}
-	.tabs_inner .tab-content .tab-pane .list li .media {
-		display: block;
-	}
-	.tabs_inner .tab-content .tab-pane .list li span {
-		display: none;
-	}
-	.tabs_inner .nav.nav-tabs {
-		margin-bottom: 0px;
-	}
 	.isotope_fillter .gallery_filter li {
 		margin-right: 17px;
 	}
